--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -96,30 +96,58 @@
 # white = '0xd9dee3'
 
 # Colors (Everforest Dark)
+# [colors.primary]
+# background = '#2d353b'
+# foreground = '#d3c6aa'
+#
+# [colors.normal]
+# black   = '#475258'
+# red     = '#e67e80'
+# green   = '#a7c080'
+# yellow  = '#dbbc7f'
+# blue    = '#7fbbb3'
+# magenta = '#d699b6'
+# cyan    = '#83c092'
+# white   = '#d3c6aa'
+#
+# [colors.bright]
+# black   = '#475258'
+# red     = '#e67e80'
+# green   = '#a7c080'
+# yellow  = '#dbbc7f'
+# blue    = '#7fbbb3'
+# magenta = '#d699b6'
+# cyan    = '#83c092'
+# white   = '#d3c6aa'
+
+# Colors (Everforest Light)
+
+# Default colors
 [colors.primary]
-background = '#2d353b'
-foreground = '#d3c6aa'
+background = '#fdf6e3'
+foreground = '#5c6a72'
 
+# Normal colors
 [colors.normal]
-black   = '#475258'
-red     = '#e67e80'
-green   = '#a7c080'
-yellow  = '#dbbc7f'
-blue    = '#7fbbb3'
-magenta = '#d699b6'
-cyan    = '#83c092'
-white   = '#d3c6aa'
+black   = '#5c6a72'
+red     = '#f85552'
+green   = '#8da101'
+yellow  = '#dfa000'
+blue    = '#3a94c5'
+magenta = '#df69ba'
+cyan    = '#35a77c'
+white   = '#e0dcc7'
 
+# Bright Colors
 [colors.bright]
-black   = '#475258'
-red     = '#e67e80'
-green   = '#a7c080'
-yellow  = '#dbbc7f'
-blue    = '#7fbbb3'
-magenta = '#d699b6'
-cyan    = '#83c092'
-white   = '#d3c6aa'
-
+black   = '#5c6a72'
+red     = '#f85552'
+green   = '#8da101'
+yellow  = '#dfa000'
+blue    = '#3a94c5'
+magenta = '#df69ba'
+cyan    = '#35a77c'
+white   = '#e0dcc7'
 # Gruvbox Colorscheme
 # [colors]
 # draw_bold_text_with_bright_colors = true
