added autoformat with typscript-language-server for helix

--- a/helix/.config/helix/languages.toml
+++ b/helix/.config/helix/languages.toml
@@ -1,5 +1,6 @@
 [[language]]
 name = "javascript"
+auto-format = true
 language-servers = [
   "typescript-language-server",
   "vscode-eslint-language-server"
@@ -7,6 +8,7 @@ language-servers = [
 
 [[language]]
 name = "typescript"
+auto-format = true
 language-servers = [
   "typescript-language-server",
   "vscode-eslint-language-server"
