configure eslint lsp server with code action on save hopefully

--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -4,6 +4,9 @@ theme = "everforest_dark"
 line-number = "relative"
 cursorline = true
 
+[editor.lsp]
+display-progress-messages = true
+
 [editor.cursor-shape]
 normal = "block"
 insert = "bar"
