--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -182,7 +182,7 @@ shape = "Block"
 
 [env]
 TERM = "st-256color"
-WINIT_X11_SCALE_FACTOR = "0.75"
+# WINIT_X11_SCALE_FACTOR = "0.75"
 
 [font]
 builtin_box_drawing = true
