--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -3,9 +3,10 @@ font-family = "FiraCode Nerd Font"
 theme = everforest-dark
 font-size = 12
 cursor-style = block
-window-padding-x = 0
-window-padding-y = 0
+window-padding-x = 2
+window-padding-y = 2
+adjust-cell-height = 2
 window-padding-balance = true
-window-decoration = auto
+window-decoration = none
 shell-integration-features = no-cursor,no-sudo,title
 macos-option-as-alt = true
