change to Iosevka font

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,5 +1,6 @@
 font-family = ""
-font-family = "FiraCode Nerd Font"
+# font-family = "FiraCode Nerd Font"
+font-family = "Iosevka Nerd Font"
 theme = everforest-dark
 font-size = 12
 cursor-style = block
