--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -189,20 +189,20 @@ builtin_box_drawing = true
 size = 12.0
 
 [font.bold]
-family = "FiraCode Nerd Font"
+family = "Iosevka Nerd Font"
 
 [font.bold_italic]
-family = "FiraCode Nerd Font"
+family = "Iosevka Nerd Font"
 
 [font.glyph_offset]
 x = 0
 y = 0
 
 [font.italic]
-family = "FiraCode Nerd Font"
+family = "Iosevka Nerd Font"
 
 [font.normal]
-family = "FiraCode Nerd Font"
+family = "Iosevka Nerd Font"
 
 [font.offset]
 x = 0
