--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,13 +1,24 @@
+title = "Ghostty"
+theme = everforest-dark
+
 font-family = ""
 # font-family = "FiraCode Nerd Font"
 font-family = "Iosevka Nerd Font"
-theme = everforest-dark
 font-size = 12
+
+adjust-cell-height = 0
+adjust-cell-width = 0
+
 cursor-style = block
-window-padding-x = 2
-window-padding-y = 2
-adjust-cell-height = 2
+adjust-cursor-height = 0
+
+window-padding-x = 0
+window-padding-y = 0
 window-padding-balance = true
 window-decoration = none
+
+resize-overlay = never
+
 shell-integration-features = no-cursor,no-sudo,title
+
 macos-option-as-alt = true
