add popup terminal keybind to tmux

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -41,6 +41,7 @@ bind -r -N 'Resize the pane Left' C-h resize-pane -L
 bind -r -N 'Resize the pane Down' C-j resize-pane -D
 bind -r -N 'Resize the pane Up' C-k resize-pane -U
 bind -r -N 'Resize the pane Right' C-l resize-pane -R
+bind -N 'Popup terminal' T popup
 
 # Load Nord Theme
 # set -g @nord_tmux_no_patched_font "1"
