add base-index options to tmux

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -3,9 +3,17 @@ unbind C-b
 set -g prefix C-space
 bind C-space send-prefix
 
-# Set some options
+# Set global options
 set -sg escape-time 0
 set -sg display-time 0
+set -g base-index 1
+
+# Set window options
+setw -g pane-base-index 1
+
+# Neovim Settings
+set -g focus-events on
+set -sa terminal-features ",st-256color:RGB"
 
 # Custom Keybinds
 ## Unbind all the keys first
@@ -62,7 +70,3 @@ run-shell "~/.config/tmux/themes/everforest/everforest.tmux"
 # Load the Everforest Light Theme
 # set -g @everforest_tmux_no_patched_font "1"
 # run-shell "~/.config/tmux/themes/everforest-light/everforest.tmux"
-
-# Neovim Settings
-set -g focus-events on
-set -sa terminal-features ",st-256color:RGB"
