updated emacs config to add 2 packages to make it a bit more useful

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ emacs/.config/emacs/eclipse.jdt.ls
 emacs/.config/emacs/workspace
 emacs/.config/emacs/.dap-breakpoints
 emacs/.config/emacs/eshell/*
+emacs/.config/emacs/ido*
 
 # vim
 vim/.vim/.netrwhist
