--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -51,6 +51,10 @@ bind -r -N 'Resize the pane Up' C-k resize-pane -U
 bind -r -N 'Resize the pane Right' C-l resize-pane -R
 bind -N 'Popup terminal' T display-popup -d "#{pane_current_path}"
 
+# Load the mighty-scroll plugin
+set -g mouse on
+run-shell "~/.config/tmux/plugins/tmux-mighty-scroll/mighty-scroll.tmux"
+
 # Load Nord Theme
 # set -g @nord_tmux_no_patched_font "1"
 # run-shell "~/.config/tmux/themes/nord-tmux/nord.tmux"
