back to everforest theme as its the best lol

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,6 +1,6 @@
 title = "Ghostty"
-theme = GitHub-Dark-High-Contrast
-# theme = everforest-dark
+# theme = GitHub-Dark-High-Contrast
+theme = everforest-dark
 
 font-family = ""
 # font-family = "FiraCode Nerd Font"
