--- a/tmux/.config/tmux/themes/everforest/src/everforest.conf
+++ b/tmux/.config/tmux/themes/everforest/src/everforest.conf
@@ -21,7 +21,8 @@ set -g status on
 set -g status-justify left
 
 #+--- Colors ---+
-set -g status-style bg=black,fg=white
+# set -g status-style bg=black,fg=white
+set -g status-style fg=white
 
 #+-------+
 #+ Panes +
