moved to black-metal-immortal

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,6 +1,7 @@
 title = "Ghostty"
 # theme = GitHub-Dark-High-Contrast
-theme = everforest-dark
+# theme = everforest-dark
+theme = Black Metal (Immortal)
 
 font-family = ""
 # font-family = "FiraCode Nerd Font"
