--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,7 +1,8 @@
 title = "Ghostty"
 # theme = GitHub-Dark-High-Contrast
 # theme = everforest-dark
-theme = Black Metal (Immortal)
+# theme = Black Metal (Immortal)
+theme = Atom One Dark
 
 font-family = ""
 # font-family = "FiraCode Nerd Font"
