--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -2,7 +2,7 @@ title = "Ghostty"
 # theme = GitHub-Dark-High-Contrast
 # theme = everforest-dark
 # theme = Black Metal (Immortal)
-theme = Atom One Dark
+theme = One Half Dark
 
 font-family = ""
 # font-family = "FiraCode Nerd Font"
